--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
     <div class="hero-unit">
       <img src="./images/logo-exquisite-dupe.png" width="400px" height="auto">
       <div class="video-container">
-        <iframe width="640" height="auto" src="https://www.youtube.com/embed/weeI1G46q0o" frameborder="0" allowfullscreen></iframe>
+        <iframe width="640" height="auto" src="https://www.youtube.com/embed/ys8dBP5LI0k" frameborder="0" allowfullscreen></iframe>
       </div>
       <!-- Begin MailChimp Signup Form -->
       <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
@@ -38,7 +38,7 @@
           <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="exquisite address" required>
             <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
             <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_e64dbba1e7d86aaf89c4a0baa_c11b2fd2c2" tabindex="-1" value=""></div>
-            <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+            <div class="clear"><input type="submit" style="background:url(images/icon-subscribe.png) no-repeat; width: 90px; margin-left: 2px;" value="" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
             </div>
         </form>
       </div>
