fixed youtube link

--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
     <div class="hero-unit">
       <img src="./images/logo-exquisite-dupe.png" width="400px" height="auto">
       <div class="video-container">
-        <iframe width="640" height="auto" src="https://www.youtube.com/embed/ys8dBP5LI0k" frameborder="0" allowfullscreen></iframe>
+        <iframe width="640" height="auto" src="https://www.youtube.com/embed/z-fgBKHdG-U" frameborder="0" allowfullscreen></iframe>
       </div>
       <!-- Begin MailChimp Signup Form -->
       <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
