--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
       <div id="mc_embed_signup">
         <form action="//exquisitedupe.us15.list-manage.com/subscribe/post?u=e64dbba1e7d86aaf89c4a0baa&amp;id=c11b2fd2c2" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
             <div id="mc_embed_signup_scroll">
-          <label for="mce-EMAIL">Subscribe to our mailing list</label>
+          <label for="mce-EMAIL">Subscribe to the mailing list</label>
           <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="exquisite address" required>
             <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
             <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_e64dbba1e7d86aaf89c4a0baa_c11b2fd2c2" tabindex="-1" value=""></div>
@@ -45,7 +45,7 @@
 
       <!--End mc_embed_signup-->
       <div class="contact">
-        <p>Contact us at:</p>
+        <p>Contact me at:</p>
         <p><a href="mailto:jonathan@exquisitedupe.com">jonathan@exquisitedupe.com</a></p>
       </div>
       
