--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,7 @@
 
       <!--End mc_embed_signup-->
       <div class="contact">
-        <p>Contact me at:</p>
+        <p>Contact the dupe at:</p>
         <p><a href="mailto:jonathan@exquisitedupe.com">jonathan@exquisitedupe.com</a></p>
       </div>
       
